# noisy-cuda

./: .gitignore  100  4  CMakeLists.txt  Makefile  README.md  noisy_cuda  test.txt
docs/: docs.md  notes.md
docs/cpp/v1/: cpp_doc_v1.md
include/: cpu_generate_perlin.h  gpu_generate_perlin.h  options.h  options.hpp  perlin.h  perlin_noise.hpp  utils.h  utils.hpp  utils_cpu.hpp  utils_cuda.hpp  utils_global.hpp
noisy-studio/: backend.py  config.py  main.py  models.py  requirements.txt
noisy-studio/ui/: components.py  workers.py
noisyDocs/: main.tss  project.tsp  theme.tst
noisyDocs/sections/: extraTools.tss  intro.tss  projectStructure.tss  standardAlgorithm.tss
src/: cpu_generate_perlin.c  cuda_kernel.cu  gpu_generate_perlin.cu  main.c  main.cpp  options.c  options.cpp  perlin.c  utils.c  utils.cpp
src/cpp/: CMakeLists.txt  cpp__perlin_noise.cpp  cpp__perlin_noise_v1.cpp  cpp__perlin_noise_v2.cpp  cpp__perlin_noise_v3.cpp
src/cuda/: CMakeLists.txt  cuda__perlin_noise_v1.cu  cuda__perlin_noise_v1_backup.cu  cuda__perlin_noise_v2.cu  cuda__perlin_noise_v3.cu  cuda__perlin_noise_v4.cu  cuda__utils.cu  cuda__utils.hpp
src/simd/: CMakeLists.txt  simd__perlin_noise.cpp  simd__perlin_noise_v1.cpp  simd__perlin_noise_v2.cpp  simd__utils.cpp
tests/: start-cuda-profiling-test.sh  start.sh  test.ncu-rep
tests/animate-noise/: animate.py  requirements.txt
tests/benchmarks/: comparison_benchmark.sh  cpp_benchmark.sh  cuda_benchmark.sh  cuda_ncu_benchmark.sh
tests/noisy-studio/: backend.py  config.py  models.py
tests/noisy-studio/ui/: components.py  main_window.py  workers.py
tests/nsight-compute-test/noisy-cuda-test/: noisy-cuda-test.ncu-proj
tests/outputs/: cpp_v1_output.csv  cpp_v2_output.csv  cuda_v4_output.csv
tests/outputs/csv/: benchmark_cpp_v2.csv  benchmark_cuda_v3.csv  cpp_v1_output.csv  cpp_v2_output.csv  cuda_v1_output.csv  cuda_v2_output.csv  cuda_v3_output.csv  cuda_v4_output.csv
tests/outputs/cuda-nsys/: report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep
tests/plot/: plot_cuda_cpp.py  plot_cuda_versions.py  plot_line_v1_times.py  start-benchmark.sh
tests/plot/benchmark-comparison/: start-benchmark.sh
tests/plot/cpp/: plot.py
tests/plot/cpp_vs_cuda/benchmark-comparison/: benchmark_v1.csv  plot_line_v1_times.py
tests/plot/cuda/: plot_versions.py
